[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/samplecard/fantasy card/card fantasy golden.png" type="Texture" id=1]
[ext_resource path="res://assets/samplecard/fantasy card/fantasy empty card section.png" type="Texture" id=2]
[ext_resource path="res://2D_interface/CardAvatar.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 127, 177 )

[node name="CardAvatar" type="Node2D"]
script = ExtResource( 3 )

[node name="Visuals" type="Node2D" parent="."]

[node name="FantasyEmptyCardSection" type="Sprite" parent="Visuals"]
texture = ExtResource( 2 )

[node name="CardFantasyGolden" type="Sprite" parent="Visuals"]
scale = Vector2( 0.34, 0.34 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
